--- a/src/elements/_contents.scss
+++ b/src/elements/_contents.scss
@@ -73,7 +73,7 @@ code {
 }
 
 pre {
-	background: hsl(var(--muted-dark));
+	background: hsl(var(--contrast-inverse));
 	border: 0;
 	border-radius: .25rem;
 	color: hsl(var(--contrast));
